<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_background_color">

    <ImageView
        android:id="@+id/poster_image_view_movie_list_item"
        android:layout_width="@dimen/poster_width_movie_list_item"
        android:layout_height="@dimen/poster_height_movie_list_item"
        android:layout_marginStart="@dimen/material_default_margin_8dp"
        android:layout_marginTop="@dimen/material_default_margin_8dp"
        android:layout_marginBottom="@dimen/material_default_margin_8dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poster_mock"
        android:contentDescription="@string/content_description_poster_image_of_movie" />

    <TextView
        android:id="@+id/title_text_view_movie_list_item"
        android:text="@string/mock_movie_title_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_image_view_movie_list_item"
        app:layout_constraintTop_toTopOf="@id/poster_image_view_movie_list_item"
        style="@style/default_movie_title" />

    <TextView
        android:id="@+id/release_date_text_view_movie_list_item"
        android:text="@string/mock_movie_release_date_list"
        app:layout_constraintEnd_toEndOf="@id/title_text_view_movie_list_item"
        app:layout_constraintTop_toBottomOf="@id/title_text_view_movie_list_item"
        style="@style/default_movie_release_date" />

    <TextView
        android:id="@+id/genre_text_view_movie_list_item"
        style="@style/default_movie_genre"
        android:text="@string/mock_movie_genre_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/title_text_view_movie_list_item"
        app:layout_constraintTop_toBottomOf="@id/release_date_text_view_movie_list_item"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>